// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Breadcrumb App Details Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Apps List Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Big Query Table Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/pings/activation"
      >
        activation
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/tables/activation/"
      >
        activation table
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Metric Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/metrics/about_page.libraries_tapped"
      >
        about_page.libraries_tapped
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Ping Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/pings/activation"
      >
        activation
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Email Addresses Multiple Emails 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:example@example.com"
    >
      example@example.com
    </a>
  </span>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:email@email.com"
    >
      email@email.com
    </a>
  </span>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:post@pigeon.com"
    >
      post@pigeon.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots Email Addresses Single Email 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:glean@mozilla.com"
    >
      glean@mozilla.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots FilterInput Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="container"
  >
    <div
      class="svelte-y697ub"
    >
      <input
        class="svelte-y697ub"
        id="filter-input"
        placeholder="filter terms"
        type="text"
      />
    </div>
     
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
      <li>
        foobar
      </li>
      <li>
        lorem
      </li>
      <li>
        ipsum
      </li>
    </ul>
  </div>
</section>
`;

exports[`Storyshots ItemList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="svelte-y697ub"
  >
    <input
      class="svelte-y697ub"
      id="filter-input"
      placeholder="filter terms"
      type="text"
    />
  </div>
   
  <div
    class="item-browser svelte-h6w07w"
  >
    <table
      class="mzp-u-data-table svelte-h6w07w"
    >
      <col
        class="svelte-h6w07w"
        width="35%"
      />
       
      <col
        class="svelte-h6w07w"
        width="25%"
      />
       
      <col
        class="svelte-h6w07w"
        width="40%"
      />
       
      <thead
        class="svelte-h6w07w"
      >
        <tr
          class="svelte-h6w07w"
        >
          <th
            class="svelte-h6w07w"
            scope="col"
            style="text-align: center;"
          >
            Name
          </th>
           
          <th
            class="svelte-h6w07w"
            scope="col"
            style="text-align: center;"
          >
            Type
          </th>
           
          <th
            class="svelte-h6w07w"
            scope="col"
            style="text-align: center;"
          >
            Description
          </th>
        </tr>
      </thead>
       
      <tbody
        class="svelte-h6w07w"
      >
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 0"
            >
              Test metric 0
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 0
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 1"
            >
              Test metric 1
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 1
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 2"
            >
              Test metric 2
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 2
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 3"
            >
              Test metric 3
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 3
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 4"
            >
              Test metric 4
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 4
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 5"
            >
              Test metric 5
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 5
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 6"
            >
              Test metric 6
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 6
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 7"
            >
              Test metric 7
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 7
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 8"
            >
              Test metric 8
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 8
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 9"
            >
              Test metric 9
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 9
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 10"
            >
              Test metric 10
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 10
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 11"
            >
              Test metric 11
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 11
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 12"
            >
              Test metric 12
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 12
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 13"
            >
              Test metric 13
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 13
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 14"
            >
              Test metric 14
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 14
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 15"
            >
              Test metric 15
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 15
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 16"
            >
              Test metric 16
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 16
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 17"
            >
              Test metric 17
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 17
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 18"
            >
              Test metric 18
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 18
            
          </td>
           
        </tr>
        <tr
          class="svelte-h6w07w"
        >
          <td
            class="svelte-h6w07w"
          >
            <a
              class="svelte-h6w07w"
              href="/apps/app-name/metrics/Test metric 19"
            >
              Test metric 19
            </a>
          </td>
           
          <td
            class="svelte-h6w07w"
            style="text-align: center;"
          >
            <code
              class="svelte-h6w07w"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-h6w07w"
          >
            This is test metric 19
            
          </td>
           
        </tr>
      </tbody>
    </table>
  </div>
   
  <div
    class="pagination-position svelte-bkgwc9"
  >
    <p
      class="svelte-bkgwc9"
    >
      Page
    
      <code
        class="svelte-bkgwc9"
      >
        1
      </code>
      
    of
    
      <code
        class="svelte-bkgwc9"
      >
        2
      </code>
      
    (
      <code
        class="svelte-bkgwc9"
      >
        1
      </code>
      
    -
    
      <code
        class="svelte-bkgwc9"
      >
        20
      </code>
      
    on
    
      <code
        class="svelte-bkgwc9"
      >
        21
      </code>
      
    items)
    </p>
  </div>
   
  <div
    class="pagination-bar svelte-bkgwc9"
  >
    <div
      class="pagination-button current-page svelte-bkgwc9"
    >
      <svg
        class="feather feather-chevron-left w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 18 9 12 15 6"
        />
      </svg>
    </div>
     
    <div
      class="pages svelte-bkgwc9"
    >
      <div
        class="page current-page svelte-bkgwc9"
      >
        1
         
      </div>
      <div
        class="page  svelte-bkgwc9"
      >
        2
         
      </div>
    </div>
     
    <div
      class="pagination-button  svelte-bkgwc9"
    >
      <svg
        class="feather feather-chevron-right w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
  </div>
  
  
</section>
`;

exports[`Storyshots Markdown Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  A 
  <em>
    text
  </em>
   in markdown 
  <a
    href="https://mozilla.org"
  >
    moz
  </a>
  .
  
</section>
`;

exports[`Storyshots Pagination Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="pagination-position svelte-w3m83n"
  >
    <p
      class="svelte-w3m83n"
    >
      Page
    
      <code
        class="svelte-w3m83n"
      >
        1
      </code>
      
    of
    
      <code
        class="svelte-w3m83n"
      >
        11
      </code>
      
    (
      <code
        class="svelte-w3m83n"
      >
        1
      </code>
      
    -
    
      <code
        class="svelte-w3m83n"
      >
        20
      </code>
      
    on
    
      <code
        class="svelte-w3m83n"
      >
        210
      </code>
      
    items)
    </p>
  </div>
   
  <div
    class="pagination-bar svelte-w3m83n"
  >
    <div
      class="pagination-button current-page svelte-w3m83n"
    >
      <svg
        class="feather feather-chevron-left w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 18 9 12 15 6"
        />
      </svg>
    </div>
     
    <div
      class="pages svelte-w3m83n"
    >
      <div
        class="page current-page svelte-w3m83n"
      >
        1
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        2
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        3
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        ...
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        11
         
      </div>
    </div>
     
    <div
      class="pagination-button  svelte-w3m83n"
    >
      <svg
        class="feather feather-chevron-right w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
  </div>
  
</section>
`;

exports[`Storyshots Pill Deprecated 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="pill svelte-zw85gu"
    style="background-color: rgb(74, 85, 104);"
  >
    Deprecated
  </div>
</section>
`;

exports[`Storyshots Schema Viewer Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="schema-viewer svelte-1m543xb"
  >
    <h1
      class="svelte-cviqid"
    >
      Schema
    </h1>
     
    <div
      class="svelte-y697ub"
    >
      <input
        class="svelte-y697ub"
        id="filter-input"
        placeholder="filter terms"
        type="text"
      />
    </div>
     
    <div
      class="schema-browser svelte-1m543xb"
    >
      <p
        class="svelte-1m543xb"
      >
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              
              
            </span>
            <span
              class="svelte-19dwd80"
            >
              additional_properties
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              A JSON string containing any payload properties not present in the schema
            </p>
             
          </p>
        </div>
         
        
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              
              
            </span>
            <span
              class="svelte-19dwd80"
            >
              client_info
            </span>
             
             
          </p>
        </div>
         
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              client_info
              .
            </span>
            <span
              class="svelte-19dwd80"
            >
              os_version
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              The user-visible version of the operating system (e.g. "1.2.3"). If the version detection fails, this metric gets set to \`Unknown\`.
            </p>
             
          </p>
        </div>
         
        
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              client_info
              .
            </span>
            <span
              class="svelte-19dwd80"
            >
              telemetry_sdk_build
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              The version of the Glean SDK
            </p>
             
          </p>
        </div>
         
        
        
        
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              
              
            </span>
            <span
              class="svelte-19dwd80"
            >
              document_id
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              The document ID specified in the URI when the client sent this message
            </p>
             
          </p>
        </div>
         
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Tab Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="tabs svelte-1diarvn"
  />
   
  <div
    class="tab-content svelte-1diarvn"
  >
    <div
      class="title svelte-1cgp1qr active"
    >
      A
    </div>
    <div
      class="title svelte-1cgp1qr"
    >
      B
    </div>
     
    <div
      class="box svelte-1ato4y3"
    >
      Content for Tab A
    </div>
    
    
    
  </div>
</section>
`;
